--- a/html_build/packages/media/templates/image-item.html
+++ b/html_build/packages/media/templates/image-item.html
@@ -3,15 +3,15 @@
 	<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>
 		<div class="action-section">
 			{{#show_edit}}
-				<div class="action-block left-block edit edit-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>E</span></div>
-				<div class="action-block right-block delete delete-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>D</span></div>
+				<div class="action-block left-block edit edit-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>edit</span></div>
+				<div class="action-block right-block delete delete-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>delete</span></div>
 			{{/show_edit}}
 			{{^show_edit}}
 				<div class="action-block left-block vote vote-h {{#_has_voted}} link-disabled {{/_has_voted}}" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">
-					<span>V</span>
+					<span>vote</span>
 				</div>
 				{{#_can_follow}}
-				<div class="action-block right-block follow follow-h {{#_is_following}} link-disabled {{/_is_following}}" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>F</span></div>
+				<div class="action-block right-block follow follow-h {{#_is_following}} link-disabled {{/_is_following}}" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>follow</span></div>
 				{{/_can_follow}}
 			{{/show_edit}}
 		</div>
