--- a/html_build/pages/home/home.css
+++ b/html_build/pages/home/home.css
@@ -41,13 +41,13 @@ li.sport:hover, li.sport a:hover {
 	margin : 0 15px 0 0;
 }
 #image-list, #menu {
-	margin: 20px 0;
+	margin: 5px 0;
 }
 #menu {
 	float: left; width: 100%;
 }
 #menu #menu{
-    border: 8px solid #eaeaea;
+    border: 0;
     width: 90%;
     padding:15px 0 0 15px;
 }
@@ -105,4 +105,62 @@ li.sport a:hover {
     border-color: #FFF transparent transparent transparent;
     display: inline-block;
     margin: 0 0 3px 0;
+}
+.register-wrapper {
+	background: url(/images/background/register_background.jpg) no-repeat;
+	background-size: cover;
+	opacity: 0.5;
+	position: absolute;
+	width: 100%;
+	height: 330px;
+	top: 60px;
+}
+.register-wrapper-h #regcontainer {
+	padding: 0;
+	background-color: transparent;
+}
+#regcontainer #mainreg {
+	background-color: transparent;
+	opacity: 1;
+}
+.homePage #main {
+	padding-top: 0px;
+}
+#mainreg #fbpane {
+	background: url(/images/social/facebook.png) no-repeat;
+	width: 300px;
+	background-color: transparent;
+	background-size: cover;
+}
+#regcontainer #firstreg {
+	float: left;
+width: 350px;
+}
+#mainreg #regpane {
+	width: 470px;
+}
+#regpane #firstreg input {
+	margin-top: 0;
+	background-color: #FFF;
+	width: 300px;
+height: 35px;
+}
+#regpane input.regsubmit {
+	margin: 108px -10px 0 0;
+	padding: 0 10px;
+	float: right;
+	height: 40px;
+}
+#regcontainer #fbpane {
+	border-style: initial;
+}
+#regcontainer .regheader {
+	padding: 0 0 0 35px;
+	font-size: 3.3em;
+	font-weight: bold;
+}
+#mainreg #regor {
+	text-align: left;
+	margin-left: 84px;
+	color: #FFF;
 }
