--- a/html_build/pages/profilesetting/templates/club.html
+++ b/html_build/pages/profilesetting/templates/club.html
@@ -1,7 +1,6 @@
 <div class="row-fluid">
 	<span class="green-left-heading">Clubs</span>
 </div>
-<div><a class="add-club-h" href="javascript: void(0);">Add a New Club</a></div>
 <div id="btn-Add-club" class="div-add-dotted">
 	+ Add a Club
 </div>
@@ -16,6 +15,7 @@
 <div>
 	<span class="span2">What Club?</span>
 	<input type="text" id="txt-club-club" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
+	<a class="add-club-h" href="javascript: void(0);">Add a New Club</a>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
