--- a/html_build/pages/profilesetting/templates/highschool.html
+++ b/html_build/pages/profilesetting/templates/highschool.html
@@ -1,21 +1,21 @@
 <div class="row-fluid">
 	<span class="green-left-heading">High School</span>
 </div>
-<div><a class="add-school-h" href="javascript: void(0);">Add a New School</a></div>
 <div id="btn-Add-School" class="clearfix div-add-dotted">
 	+ ADD SCHOOL
 </div>
 <div id="section-Add-Sports-school" class="displayNone add-org-fields">
 	<div>
 		<span class="span2">What State?</span>
-		<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
+		<input type="text" id="txt-school-state" placeholder="Just Start Typing"/>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
 	</div>
 
 	<div>
 		<span class="span2">What School?</span>
-		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="0"/>
+		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled"/>
+		<a class="add-school-h" href="javascript: void(0);">Add a New School</a>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
 	</div>
