--- a/html_build/pages/profilesetting/templates/level.html
+++ b/html_build/pages/profilesetting/templates/level.html
@@ -1,4 +1,4 @@
-<div class="div-levels">
+<div class="div-levels seasons-records">
 	{{#sport}}
 		<div class="org-sport-list-header">
 			<div class="sport-name"><img src="{{icon}}" />{{sports_name}}</div>
@@ -16,28 +16,28 @@
 		<p class="field-message"></p>
 	</div>
 	<!-- id="div-school-seasons"-->
-	<div class="div-seasons displayNone">
+	<div class="div-seasons complevels-wrapper displayNone">
 		<div class="arrow-container">
-			<a href="javascript:void(0)" class="down arrow">&uarr;</a>
+			<a href="javascript:void(0)" class="down arrow up-arrow-h" title="up">&uarr;</a>
 		</div>
-		{{#Data}}
-		<div class="season-array">
-			<div class="year-label">{{year}}</div>
-
-			{{#seasons}}
-
-				<span class="single-season">
-					<input type="checkbox" class="chkSeasons chkSeasons-{{season_id}}-{{year}}" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
-					<label>&nbsp;{{season_name}} </label>
-					<a href="javascript:void(0)" class="btnOpenPositions displayNone" disabled="disabled" >Positions</a>
-				</span>
-
-			{{/seasons}}
-
+		<div class="complevels-container">		
+			<div class="complevels-inner">
+				{{#Data}}
+					<div class="season-array">
+						<div class="year-label">{{year}}</div>
+						{{#seasons}}
+							<span class="single-season">
+								<input type="checkbox" class="chkSeasons chkSeasons-{{season_id}}-{{year}}" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
+								<label>&nbsp;{{season_name}} </label>
+								<a href="javascript:void(0)" class="btnOpenPositions displayNone" disabled="disabled" >Positions</a>
+							</span>
+						{{/seasons}}
+					</div>
+				{{/Data}}
+			</div>
 		</div>
-		{{/Data}}
 		<div class="arrow-container">
-			<a href="javascript:void(0)" class="down arrow">&darr;</a>
+			<a href="javascript:void(0)" class="down arrow down-arrow-h" title="down">&darr;</a>
 		</div>
 
 	</div>
@@ -58,4 +58,3 @@
 </div>
 </div>
 </div>
-
