--- a/html_build/pages/signup/templates/basciFinal.html
+++ b/html_build/pages/signup/templates/basciFinal.html
@@ -1,8 +1,3 @@
-<style type="text/css">
-
-		
-	</style>
-
 <!--<h1>Auth module using the ORM driver for Kohana 3.1</h1>-->
 
 
@@ -81,15 +76,15 @@
 					</div>
 					</div>
 					<div id="submitbutton">
-						<input type="submit" name="create" value="Create User" class="regsubmitfinal" />
+						<input type="submit" name="create" value="Sign Up" class="regsubmitfinal" />
 					</div>	
 				</form>
 				
-			<div id="reglogin">
-		
-			<span>Been here before <a href="#">sign in</a></span>
-		
-			</div>
+			<%  if(!page) { %>	
+				<div id="reglogin">
+					<span>Been here before <a href="#">sign in</a></span>
+				</div>
+			<% } %>
 		</div>
 	</div>
 </div>
