--- a/html_build/pages/signup/templates/registration.html
+++ b/html_build/pages/signup/templates/registration.html
@@ -1,8 +1,3 @@
-<style type="text/css">
-		
-		
-	</style>
-
 <!--<h1>Auth module using the ORM driver for Kohana 3.1</h1>-->
 
 <div id="regcontainer">
@@ -31,13 +26,16 @@
 				<div class="error">
 				</div>
 				</div>
-				<input type="submit" name="create" value="Create User" class="regsubmit" />
+				<input type="submit" name="create" value="Sign Up" class="regsubmit" />
 			</form>
-			<div id="reglogin">
-		
-			<span>Been here before <a href="#">sign in</a></span>
-		
-			</div>
+			<%  if(!onlyRegister) { %>
+			
+				<div id="reglogin">
+				<span>Been here before <a href="#">sign in</a></span>
+				</div>
+				
+			<% } %>	
+			
 		</div>
 	</div>
 </div>
