put in loading image when body is empty

--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="{{base_url}}css/normalize.css">
 	<link rel="stylesheet" href="{{base_url}}css/fonts.css">
 	<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+	<style>body:empty{background: url(http://cdn.athletez.com/resources/img/main-loading.gif) no-repeat center top;}</style>
 	<script>var base_url='{{base_url}}',testpath=false,cdn='{{cdn}}',s3='{{s3}}';</script>
 	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
-</head><body></body></html>
+</head><body><!--<div id="#main"><div class="mainloading"></div></div>--></body></html>
