Pass USER ID in Add Event Error with the display of multiple photos Style tags in photo player High School to “School”

--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,8 +1,8 @@
 <div class="row-fluid">
-	<span class="green-left-heading">High School</span>
+	<span class="green-left-heading">School</span>
 </div>
 <div id="btn-Add-School" class="clearfix div-add-dotted">
-	+ ADD SCHOOL
+	+ Add a school
 </div>
 <div id="section-Add-Sports-school" class="displayNone add-org-fields">
 	<div>
