--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -41,10 +41,11 @@
 }
 
 .photo-player-right-area {
-    width: 30%;
     float: right;
     height: 100%;
     overflow-y: auto;
+    padding-left: 2%;
+    width: 28%;
 }
 
 .photo-player-right-area .right-area-header{
@@ -283,6 +284,7 @@ ul#tags-list li {
 ul#tags-list .tags-name img {
 	width: 40px;
 	height: 40px;
+	float:left
 }
 
 ul#tags-list .tags-name a span {
@@ -293,8 +295,12 @@ ul#tags-list .tags-name a span {
 	white-space:nowrap; 
 	text-overflow:ellipsis;
 	overflow:hidden; 
+	margin-left: 20px;
+	float:left;
 }
 
 ul#tags-list .tags-number {
-	margin-top: 3px;
+	margin-top: 4px;
+	margin-left: 10px;
+	width: 4px;
 }
