--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -1,5 +1,9 @@
 {{#data}}
-<a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
+
+	<div>
+		<a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
+		<a href="javascript: void(0);" title="add team" class="add-event-h">Click here to Add Event.</a>	
+	</div>
 <div class="select-team">
 	<div class="game-box-outer">
 		<ul class="schedule-list-h">
@@ -11,6 +15,13 @@
 {{/data}}
 {{^data}}
 <div class="info">	
-	No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
+	<div>
+		No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
+	</div>
+	
+	<div>
+		<a href="javascript: void(0);" title="add team" class="add-event-h">Click here to Add Event.</a>	
+	</div>
+	
 </div>
 {{/data}}
