--- a/html/packages/game-schedules/templates/schedule-item.html
+++ b/html/packages/game-schedules/templates/schedule-item.html
@@ -6,7 +6,7 @@
 			{{#teams}}
 			
 		<div class="org-name">
-			<span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span>
+			<a href="/#team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
 			{{^schedules}}
 				<span>&nbsp;(No games on the docket)</span>
 			{{/schedules}}
