--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -23,7 +23,7 @@
 	<div id="def-club-sports-section" class="school-sports-section">
 
 	</div>
-	<span class="floatLeft"><a href="javascript:void(0)" class="btn-add-sports" >Add Sports</a> </span>
+	<!--<span class="floatLeft"><a href="javascript:void(0)" class="btn-add-sports" >Add Sports</a> </span>-->
 </div>
 <!--<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span> -->
 </div>
