--- a/html/pages/profilesetting/templates/sportslevel.html
+++ b/html/pages/profilesetting/templates/sportslevel.html
@@ -27,7 +27,7 @@
 
 			</div>
 			<div class="">
-				<span class="floatLeft"><a href="javascript:void(0)" class="btn-add-level" orgsid="{{orgsId}}" tabindex="0">Add Level</a> </span>
+				<!--<span class="floatLeft"><a href="javascript:void(0)" class="btn-add-level" orgsid="{{orgsId}}" tabindex="0">Add Level</a> </span>-->
 				<span class="floatRight"><a href="javascript:void(0)" class="common-btn common-btn-direction btn-Finish-Sports" tabindex="0">Finish</a> </span>
 			</div>
 		</div>
