--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -72,13 +72,17 @@ li.sport:hover, li.sport a:hover {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-#menu .menu-link-h{
+#menu .menu-link-h,#menu span.show{
     font-weight: bolder;
     font-family: 'Nunito', "HelveticaNeue";
     font-size: 1.2em;
     color:#333;
     text-transform: uppercase;
 
+}
+#menu span.show{
+    margin-top:3px;
+    margin-right: 5px;
 }
 
 .seach-box{
@@ -139,7 +143,7 @@ li.sport a:hover {
 	position: absolute;
 	width: 100%;
 	height: 330px;
-	top: 60px;
+	top: 38px;
 }
 
 .register-wrapper-h #regcontainer {
