--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -23,7 +23,7 @@
 		<div id="def-school-sports-section" class="school-sports-section">
 
 		</div>
-		<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
+		<!--<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>-->
 	</div>
 <!-- <span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary btn-finish-addsports" >Finish</a> </span> -->
 </div>
