styling / messing with fonts.

--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -13,7 +13,8 @@
     <link rel="apple-touch-icon" sizes="114x114" href="{{base_url}}images/apple-touch-icon-iphone4.png" />
     <link rel="stylesheet" href="{{base_url}}css/normalize.css">
 	<link rel="stylesheet" href="{{base_url}}css/fonts.css">
-	<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Quicksand:400,700|Montserrat:400,700|Nunito:400,700,300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800,300' rel='stylesheet' type='text/css'>
 	<style>body:empty{background: url(http://cdn.athletez.com/resources/img/main-loading.gif) no-repeat center top;}</style>
 	<script>var base_url='{{base_url}}',testpath=false,cdn='{{cdn}}',s3='{{s3}}';</script>
 	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
