--- a/html/css/common.css
+++ b/html/css/common.css
@@ -1,4 +1,4 @@
-body { font-size:100%; font-family: "HelveticaNeue","Helvetica"; }
+body { font-size:100%; font-family: "Raleway","Helvetica"; }
 
 /*****  Common styles   ******/
 
