--- a/html/pages/signup/css/signupstyle.css
+++ b/html/pages/signup/css/signupstyle.css
@@ -65,7 +65,7 @@
 			font-size: 16px;
 			font-weight: bold;
 			cursor: pointer;
-			border-style: outset;
+			border-style: none;
 
 		}
 		#regcontainer{
@@ -74,8 +74,7 @@
 			height: auto;
 		}
 		.regheader{
-
-			font-size: 29px;
+			font-size: 20px;
 			padding: 59px;
 		}
 		.regsubmit{
@@ -85,7 +84,7 @@
 			margin-left: 38px;
 			color: white;
 			font-size: 20px;
-			border-style: outset;
+			border-style: none;
 		}
 		.regsubmitfinal{
 			background-color: #1BA0AF;
@@ -94,7 +93,7 @@
 			margin-left: 38px;
 			color: white;
 			font-size: 20px;
-			border-style: outset;
+			border-style: none;
 			margin-left: 69%;
 		}
 		#fblogo{
@@ -107,7 +106,7 @@
 		#header{
 			padding-top: 16px;
 			padding-bottom: 20px;
-			font:  bold 12px/30px Georgia,serif;
+			font:  bold 12px/20px;
 		}
 		#regor{
 			text-align: center;
@@ -210,7 +209,7 @@
    		}
    		.imgup{
     		background-color: #1BA0AF;
-    		border-style: outset;
+    		border-style: none;
    			color: #FFFFFF;
    			font-size: 14px;
     		height: 31px;
