--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -223,7 +223,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
+  font-family: "Lato","HelveticaNeue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: normal;
