--- a/html/css/app.css
+++ b/html/css/app.css
@@ -927,7 +927,8 @@ span.team-label{
 
 /** Popup CSS **/
 .modal-body {
-	width: 100%;
+	width: 99%;
+    padding: 0;
 }
 
 
@@ -1006,8 +1007,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 
 
 .add-game-modal{
-    width:50%;
-    left:25%;
+    height:75%;
+    max-height: 75%;
+    width:550px;
+    left:50%;
+    margin-left: -275px;
 }
 /*
 .add-game-modal div.modal-body{
