--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -5242,10 +5242,9 @@ input[type="submit"].btn.btn-mini {
 
 .modal-body {
   position: relative;
-  max-height: 85%;
-    min-height: 85%;
-  padding: 15px;
-  overflow-y: auto;
+  max-height: 90%;
+  min-height: 90%;
+  overflow-y: scroll;
 }
 
 .modal-form {
