--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -1,6 +1,7 @@
 {{#data}}
 	<div>
 		{{#eventPage}}
+			<strong>{{eventPage}} Event</strong>
 			<a href="javascript: void(0);" title="add team" class="add-event-h">Click here to Add Event.</a>	
 		{{/eventPage}}
 		
