--- a/html/usercontrols/addevent/templates/layout.html
+++ b/html/usercontrols/addevent/templates/layout.html
@@ -2,6 +2,21 @@
 	<!-- <h4>Add Game</h4> -->
 	<!-- <div class="green-left-heading ">DATE</div> -->
 <div class="clear"></div>
+	<div class="section-individual-game_h displayNone">
+		<input type="text"class="txt-individual-game_h" placeholder="Enter Event" />
+		<span class="indicator_h"></span>
+		<div class="clear"></div>
+		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
+			<div class="clear"></div>
+		<span class="displayNone field-message field-message_h"></span>
+			<div class="clear"></div>
+		<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">
+			Go There !
+		</button>
+		<button class="btn btn-primary btn-game-individual-Create_h floatRight displayNone">
+			Create !
+		</button>
+	</div>
 	<div class="section-Add-Sports_h">
 		<div class="section-game-date_h floatLeft">
 			<input type="text" class="txt-game-date_h txtDate" placeholder="Enter Date" readonly="readonly" />
@@ -60,21 +75,7 @@
 		</div>
 	</div>
 <div class="clear"></div>
-	<div class="section-individual-game_h displayNone">
-		<input type="text"class="txt-individual-game_h" placeholder="Enter Game" />
-		<span class="indicator_h"></span>
-		<div class="clear"></div>
-		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
-			<div class="clear"></div>
-		<span class="displayNone field-message field-message_h"></span>
-			<div class="clear"></div>
-		<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">
-			Go There !
-		</button>
-		<button class="btn btn-primary btn-game-individual-Create_h floatRight displayNone">
-			Create !
-		</button>
-	</div>
+
 
 	<div class="section-game-teams_h team-two_h displayNone">
 		<!-- <div class="green-left-heading">TEAM 2</div> -->
