--- a/html/css/app.css
+++ b/html/css/app.css
@@ -536,9 +536,8 @@ ul.ui-autocomplete {
 }
 
 .ui-autocomplete-loading{
-    background-image: url(http://cdn.athletez.com/resources/img/17-1.gif) !important;
-    background-position: right !important;
-    background-repeat: no-repeat !important;
+    background-image: url(http://athletez.s3.amazonaws.com/resources/img/gray_loading.gif) !important;
+    background-repeat: repeat;
 }
 
 .ui-autocomplete li.ui-menu-item {
