--- a/html_build/css/bootstrap.css
+++ b/html_build/css/bootstrap.css
@@ -196,7 +196,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
+  font-family: "Lato","HelveticaNeue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: normal;
@@ -204,12 +204,12 @@ body {
   background-color: #ffffff;
 }
 a {
-  color: #0088cc;
+  color: #333333;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #005580;
+  color: #6a6a6a;
 }
 .img-rounded {
   -webkit-border-radius: 6px;
@@ -4395,10 +4395,9 @@ input[type="submit"].btn.btn-mini {
 }
 .modal-body {
   position: relative;
-  max-height: 85%;
-    min-height: 85%;
-  padding: 15px;
-  overflow-y: auto;
+  max-height: 90%;
+  min-height: 90%;
+  overflow-y: scroll;
 }
 .modal-form {
   margin-bottom: 0;
