--- a/html_build/packages/game-schedules/templates/schedule-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-item.html
@@ -6,11 +6,12 @@
 			{{#teams}}
 			
 		<div class="org-name">
-			<span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span>
+			<a href="/#team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
 			{{^schedules}}
 				<span>&nbsp;(No games on the docket)</span>
 			{{/schedules}}
 			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h">Add Game</a>
+			<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>
 		</div>
 			<div class="game-box-outer">
 		<ul>
