--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -5,12 +5,17 @@
 		<!--div class="sports-h"></div-->
 		<div class="game-general">
 			<div class="stretch"></div>
-			{{#shared.sport}}<span class="sport-h" data-id="{{sports_id}}">{{shared.sport}}</span>{{/shared.sport}}
-			{{#shared.complevel}}<span>{{shared.complevel}}</span>{{/shared.complevel}}
-			{{#shared.season}}<span>{{shared.season}}</span>{{/shared.season}}
+			{{#shared}}
+				{{#shared.sport}}<span class="sport-h" data-id="{{sports_id}}">{{shared.sport}}</span>{{/shared.sport}}
+				{{#shared.complevel}}<span>{{shared.complevel}}</span>{{/shared.complevel}}
+				{{#shared.season}}<span>{{shared.season}}</span>{{/shared.season}}
+			{{/shared}}
+			{{^shared}}
+				{{#event_name}}<span class="sport-h" data-id="{{sports_id}}">{{event_name}}</span>{{/event_name}}
+			{{/shared}}
 		</div>
 
-		<h3>{{game_day}} {{gameTime}}</h3>
+		<h3>{{game_day}} {{game_time}}</h3>
 		<p>
 			{{game_location}}
 		</p>
@@ -47,11 +52,12 @@
 		{{#teams}}
 		<li class="team-item">
 			<div class='score-box score-box-h {{#isWinner}}win{{/isWinner}}'>
-				<a href="javascript: void(0);" title="edit score" class="edit-score-h"> <span>{{points_scored}}</span> </a>
+				<a href="javascript: void(0);" title="edit score" class="edit-score-h"> <span style="width:100%; height: 100%">{{points_scored}}</span> </a>
+
 				<input type="hidden" value="{{points_scored}}" data-id="{{games_teams_link_id}}" class="edit-score-input-h input-mini" />
 			</div>
 			<div class="org-info">
-				<span class="org-name"> {{org_sport_link_obj.org.org_name}}, {{complevels_obj.complevel_name}}, {{seasons_obj.season_name}} {{year}} </span>
+				<span class="org-name"><a href="/#team/{{id}}">{{org_sport_link_obj.org.org_name}}, {{complevels_obj.complevel_name}}, {{seasons_obj.season_name}} {{year}}</a></span>
 				<span class="org-location"> {{team_location}} </span>
 			</div>
 		</li>
@@ -68,9 +74,13 @@
 	</div>
 	<div class="modal-body page-content-h">
 		<form action="#" class="update-date-time-h" name="update-date-time">
+			<div class="row-fluid">
 			<label>Date &amp; Time</label>
-			<input type="text" class="date-time-h" value="{{gameDay}} {{gameTime}}" readonly="readonly" />
-			<label>Location</label>
+			<input type="text" class="txt-game-date_h txtDate" placeholder="Enter Date" value="{{gameDay}}" readonly="readonly" />
+			<input type="text" class="txt-game-time_h hasDatepicker txtTime"  placeholder="Time" value="{{game_hour}}" placeholder="Time" maxlength="5" />
+			<span class="spn-ddl-time-period_h"></span>
+			</div>
+			<div class="row-fluid"><label>Location</label></div>
 			
 			<textarea placeholder="Address" class="location-h address-h" rows="3" cols="25">{{game_location}}</textarea>
 			<a href="javascript: void(0);" title="Verify Address" class="verify-address-h">Verify Address</a>
