--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -3,6 +3,25 @@
 </div>
 <div class="menu-outer-h">
 
+	<div id="resulttype" class="menu span3">
+		<a href="javascript:void(0)" class="menu-link-h restype-link-h"><span class="option-heading-h">Athletes</span>
+
+			<div class="caret-large-container">
+				<span class="caret-large"></span>
+			</div>
+		</a>
+
+		<div class="dd menu-detail-h reset-view-area-h restype-options-h">
+
+			<div class="clearfix"></div>
+			<ul class="dropdown-menu" style="display: block; position: relative;">
+				<li><a id="user" class="restype" data-number="2" href="javascript:void(0)">Athletes</a></li>
+				<li><a id="image" class="restype" data-number="1" href="javascript:void(0)">Images</a></li>
+				<li><a id="video" class="restype"  data-number="0" href="javascript:void(0)">Videos</a></li>
+				<li><a id="game" class="restype" data-number="3" href="javascript:void(0)">Games</a></li>
+			</ul>
+		</div>
+	</div>
 	<div id="sport" class="menu span3">
 		<a href="javascript:void(0)" class="menu-link-h sport-link-h">
 			<span class="option-heading-h">ALL SPORTS</span>
@@ -47,7 +66,7 @@
 		</div>
 	</div>
 
-	<div id="views" class="menu span2">
+	<div id="views" class="menu span3">
 		<a href="javascript:void(0)" class="menu-link-h view-link-h"><span class="option-heading-h">ORDER</span>
 
 			<div class="caret-large-container">
@@ -82,28 +101,13 @@
 			</div>
 		</div>
 	</div>
-	<div id="resulttype" class="menu span2">
-		<a href="javascript:void(0)" class="menu-link-h restype-link-h"><span class="option-heading-h">Athletes</span>
 
-			<div class="caret-large-container">
-				<span class="caret-large"></span>
-			</div>
-		</a>
 
-		<div class="dd menu-detail-h reset-view-area-h restype-options-h">
 
-			<div class="clearfix"></div>
-				<ul class="dropdown-menu" style="display: block; position: relative;">
-					<li><a id="user" class="restype" data-number="2" href="javascript:void(0)">Athletes</a></li>
-					<li><a id="image" class="restype" data-number="1" href="javascript:void(0)">Images</a></li>
-					<li><a id="video" class="restype"  data-number="0" href="javascript:void(0)">Videos</a></li>
-					<li><a id="game" class="restype" data-number="3" href="javascript:void(0)">Games</a></li>
-				</ul>
-		</div>
-	</div>
+
 
 	<div class="pull-right search-box">
-		<input type="text" id="search" placeholder="SEARCH"/>
+		<input type="text" id="search" placeholder="SEARCH"/><a>Search</a>
 	</div>
 
 
