--- a/html_build/pages/profilesetting/templates/highschool.html
+++ b/html_build/pages/profilesetting/templates/highschool.html
@@ -1,8 +1,8 @@
 <div class="row-fluid">
-	<span class="green-left-heading">High School</span>
+	<span class="green-left-heading">School</span>
 </div>
 <div id="btn-Add-School" class="clearfix div-add-dotted">
-	+ ADD SCHOOL
+	+ Add a school
 </div>
 <div id="section-Add-Sports-school" class="displayNone add-org-fields">
 	<div>
@@ -23,7 +23,7 @@
 		<div id="def-school-sports-section" class="school-sports-section">
 
 		</div>
-		<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
+		<!--<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>-->
 	</div>
 <!-- <span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary btn-finish-addsports" >Finish</a> </span> -->
 </div>
