--- a/html_build/pages/userresume/templates/rdtree.html
+++ b/html_build/pages/userresume/templates/rdtree.html
@@ -5,22 +5,19 @@
 <div id="container-rdtree" class="row-fluid inset-data-entry">
 	{{#rdtrees}}
 	<div class="section-rdtree-items_h">
-		<div><span class="standard-subsection-header" style="margin-top:15px;">{{title}}</span>
-
-			<a href="javascript:void(0)" class="edit btn-edit-rdtree_h">&nbsp;</a>
-		</div>
+		<div><span class="standard-subsection-header" style="margin-top:15px;">{{title}}</span></div>
 		{{#data}}
 			<div class="rd-entry">
 				<span>{{#icon}}<img src="{{icon}}" />{{/icon}}{{name}}</span>
 				<span>
-					<input type="text" class="txtRdTrees_h" treeId="{{id}}" value="{{val}}" resumeDataId="{{resumeDataId}}" disabled="disabled"/>
+					<input type="text" class="txtRdTrees_h" treeId="{{id}}" value="{{val}}" resumeDataId="{{resumeDataId}}"/>
 					<span class="alert alert-danger displayNone error_h"></span>
 					<span class="alert alert-success displayNone success_h"></span>
 					
 				</span>
 			</div>
 		{{/data}}
-		<a href="javascript:void(0)" class="resume_button btn-Finish-RdTree_h displayNone">FINISH</a>
+		<!--<a href="javascript:void(0)" class="resume_button btn-Finish-RdTree_h displayNone">FINISH</a>-->
 	</div>
 	{{/rdtrees}}
 </div>
