--- a/html_build/usercontrols/photo-player/templates/tag-item.html
+++ b/html_build/usercontrols/photo-player/templates/tag-item.html
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="tags-name">
-		<span><a href="{{_link}}" title="{{{_label}}}"><img src="{{_thumbnail}}" alt="{{{_label}}}" /><span>{{{_label}}}</span></a></span>
+		<span><a href="{{_link}}" title="{{{_label}}}"><img src="{{_thumbnail}}" /><span>{{{_label}}}</span></a></span>
 		<span class="tags-number">{{count}}10</span>
     </div>
 </div>
