--- a/html/css/app.css
+++ b/html/css/app.css
@@ -926,7 +926,9 @@ span.team-label{
 
 /** Popup CSS **/
 .modal-body {
-	width: 99%;
+    position: absolute;
+    height: 90%;
+	width: 96%;
     padding: 0;
 }
 
@@ -1007,7 +1009,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 
 .add-game-modal{
     height:75%;
-    max-height: 75%;
+    max-height: 500px;
     width:550px;
     left:50%;
     margin-left: -275px;
