--- a/html_build/packages/game-schedules/templates/schedule-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-item.html
@@ -11,7 +11,7 @@
 				<span>&nbsp;(No games on the docket)</span>
 			{{/schedules}}
 			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h">Add Game</a>
-			<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>
+			<!--<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>-->
 		</div>
 			<div class="game-box-outer">
 		<ul>
