--- a/html_build/usercontrols/addgame/templates/layout.html
+++ b/html_build/usercontrols/addgame/templates/layout.html
@@ -1,4 +1,10 @@
-<div class="well-large container_add_game">
+<div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	<h3>Add Game</h3>
+</div>
+<div class="modal-body page-content-h">
+
+
+	<div class="well-large container_add_game">
 	<!-- <h4>Add Game</h4> -->
 	<!-- <div class="green-left-heading ">DATE</div> -->
 <div class="clear"></div>
@@ -68,12 +74,7 @@
 			<div class="clear"></div>
 		<span class="displayNone field-message field-message_h"></span>
 			<div class="clear"></div>
-		<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">
-			Go There !
-		</button>
-		<button class="btn btn-primary btn-game-individual-Create_h floatRight displayNone">
-			Create !
-		</button>
+
 	</div>
 
 	<div class="section-game-teams_h team-two_h displayNone">
@@ -117,9 +118,14 @@
 	</div>
 	<div class="clear"></div>
 	<div>
-	<button class="btn btn-primary btn-game-Finish_h floatRight displayNone">
-		Create ! 
-	</button>
+
 	</div>
 	<div class="clear"></div>
+</div>
+
+<!--END MODAL BODY--></div>
+<div class="modal-footer">
+	<button class="btn btn-primary btn-game-Finish_h floatRight displayNone">Create Game</button>
+	<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">Add Me To That Event</button>
+	<button class="btn btn-primary btn-game-individual-Create_h floatRight displayNone">Create Event</button>
 </div>
