--- a/html_build/css/bootstrap.css
+++ b/html_build/css/bootstrap.css
@@ -4352,6 +4352,7 @@ input[type="submit"].btn.btn-mini {
   filter: alpha(opacity=60);
 }
 .modal {
+    min-height: 500px !important;
   position: fixed;
   top: 10%;
   left: 5%;
