Wed Morning Build.

--- a/html_build/pages/signup/css/signupstyle.css
+++ b/html_build/pages/signup/css/signupstyle.css
@@ -1,3 +1,87 @@
+.regheader{
+			font-size: 20px;
+			padding: 59px;
+		}
+#header{
+			padding-top: 16px;
+			padding-bottom: 20px;
+			font:  bold 12px/20px;
+		}
+#fbpane{
+			background-color: #3b5998;
+			width: 242px;
+			padding: 10px;
+			margin-left: 18%;
+			text-align: center;
+			color: white;
+			font-family: Tahoma;
+			font-size: 16px;
+			font-weight: bold;
+			cursor: pointer;
+			border-style: none;
+		}	
+#regpanemain{
+		position: absolute;
+		width: 547PX;
+}	
+#firstregbase{
+	
+    padding-left: 75px;
+    width: 347px;
+	float: left;
+}	
+#firstregbase input{
+			background-color: #FFFFFF;
+			border-style: none;
+			color: #68686A;
+			font-family: Tahoma;
+			font-size: 16px;
+			font-weight: bold;
+			height: 29px;
+			margin-left: 16px;
+			margin-top: 5px;
+			padding-left: 14px;
+			width: 297px;
+		}
+#mainreg{
+			width: 495px;
+			position: relative;
+			background-color: white;
+			margin: 0 auto;
+		}
+.regor{
+			color: #E7E7E7;
+			margin: auto;
+			position: relative;
+			text-align: center;
+}
+.regsubmit{
+			background-color: #9DCA3C;
+			width: 224px;
+			color: white;
+			font-size: 20px;
+			border-style: none;
+			padding: 0 10px;
+			height: 40px;
+}
+.signupsubmit{
+	
+			padding-top: 106px;
+		
+}
+.signupform{
+			width: 100%;
+			position: relative;
+			
+}
+#reglogin{
+			text-align: center;
+}
+#reglogin	a{
+		text-decoration: none;
+		color: #6C74B7;
+		border-bottom: 1px solid rgb(202, 196, 196);
+}
 #firstreg input{
 			background-color: #E4E3E9;
     		border-style: none;
@@ -39,49 +123,21 @@
 			margin-bottom: 0%;
 		}
 		
-		#mainreg{
-			width: 500px;
-			position: relative;
-			background-color: white;
-			margin: 0 auto;
-		}
+		
 		#mainregfinal{
-			width: 673px;
+			width: 100%;
 			position: relative;
 			background-color: white;
 			margin: 0 auto;
 		}
-		#fbpane{
-			background-color: #3b5998;
-			width: 242px;
-			padding: 10px;
-			margin-left: 18%;
-			text-align: center;
-			color: white;
-			font-family: Tahoma;
-			font-size: 16px;
-			font-weight: bold;
-			cursor: pointer;
-			border-style: none;
-		}
+		
 		#regcontainer{
 			margin: 0 auto;
 			width: 100%;
 			height: auto;
 		}
-		.regheader{
-			font-size: 20px;
-			padding: 59px;
-		}
-		.regsubmit{
-			background-color: #9DCA3C;
-			width: 224px;
-			height: 51px;
-			margin-left: 38px;
-			color: white;
-			font-size: 20px;
-			border-style: none;
-		}
+		
+		
 		.regsubmitfinal{
 			background-color: #1BA0AF;
 			width: 224px;
@@ -98,11 +154,7 @@
 			width: 50px;
 			background-color: wheat;
 		}
-		#header{
-			padding-top: 16px;
-			padding-bottom: 20px;
-			font:  bold 12px/20px;
-		}
+		
 		#regor{
 			text-align: center;
 			padding-top: 14px;
@@ -111,13 +163,7 @@
 			font-weight: bold;
 			color: #68686A;
 		}
-		#reglogin{
 		
-			width: 100%;
-			text-align: center;
-			padding-top: 5px;
-			font-family: thahoma;
-		}
 		
 		.label{
 			width: 123px;
