--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -16,7 +16,14 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Quicksand:400,700|Montserrat:400,700|Nunito:400,700,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800,300' rel='stylesheet' type='text/css'>
 	<style>body:empty{background: url(http://cdn.athletez.com/resources/img/main-loading.gif) no-repeat center top;}</style>
-	<script>var base_url='{{base_url}}',testpath=false,cdn='{{cdn}}',s3='{{s3}}';</script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-45111767-1', 'athletez.com');
+		ga('send', 'pageview');
+	var base_url='{{base_url}}',testpath=false,cdn='{{cdn}}',s3='{{s3}}';</script>
 	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
 </head><body><!--<div id="#main"><div class="mainloading"></div></div>--></body></html>
