--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -3,7 +3,7 @@
 	<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>
 		<div class="action-section">
 			{{#show_edit}}
-				<div class="action-block left-block edit edit-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>edit</span></div>
+				<!--<div class="action-block left-block edit edit-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>edit</span></div>-->
 				<div class="action-block right-block delete delete-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>delete</span></div>
 			{{/show_edit}}
 			{{^show_edit}}
