made reset universal on home menu.

--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,7 +1,3 @@
-<style type="text/css">
-	
-
-</style>
 <div class="demo-select">
 
 </div>
@@ -106,7 +102,7 @@
 		</div>
 	</div>
 	<div id="views" class="menu span2" >
-		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h views-reset-btn-h">RESET</span>
+		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h">RESET</span>
 
 			
 		</a>
