--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -32,7 +32,7 @@
 		</a>
 
 		<div class="dd menu-detail-h reset-sport-area-h sports-option-h">
-			<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>
+			<!--<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>-->
 
 			<div class="left text-center">
 				<strong>Guys</strong>
@@ -60,13 +60,13 @@
 		</a>
 
 		<div class="dd menu-detail-h reset-location-area-h">
-			<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>
+			<!--<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>-->
 			<!--div class="state"></div-->
 			<div class="city"></div>
 		</div>
 	</div>
 
-	<div id="views" class="menu span3">
+	<div id="views" class="menu span2">
 		<a href="javascript:void(0)" class="menu-link-h view-link-h"><span class="option-heading-h">ORDER</span>
 
 			<div class="caret-large-container">
@@ -75,7 +75,7 @@
 		</a>
 
 		<div class="dd menu-detail-h reset-view-area-h view-options-h">
-			<a href="javascript: void(0);" class="btn views-reset-btn-h">Reset</a>
+			
 
 			<div class="dropdown">
 				<span> SORT BY</span>
@@ -100,6 +100,12 @@
 				</ul>
 			</div>
 		</div>
+	</div>
+	<div id="views" class="menu span2" >
+		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h">RESET</span>
+
+			
+		</a>
 	</div>
 
 
