--- a/html_build/packages/game-schedules/templates/schedule-list.html
+++ b/html_build/packages/game-schedules/templates/schedule-list.html
@@ -1,7 +1,7 @@
 {{#data}}
 	<div>
 		{{#eventPage}}
-			<strong>{{eventPage}} Event</strong>
+			<strong style="margin-left:100px;">{{eventPage}} Events</strong>
 			<a href="javascript: void(0);" title="add team" class="add-event-h">Click here to Add Event.</a>	
 		{{/eventPage}}
 
