--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -19,16 +19,17 @@
 </div>
 {{/data}}
 {{^data}}
-<div class="info">	
+<div class="info">
+	{{#eventPage}}
+	<div>
+		<a href="javascript: void(0);" title="Add an Event" class="add-event-h">Click here to Add Event.</a>
+	</div>
+	{{/eventPage}}
 	{{^eventPage}}
 	<div>
 		No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
 	</div>
 	{{/eventPage}}
-	{{#eventPage}}
-	<div>
-		<a href="javascript: void(0);" title="add team" class="add-event-h">Click here to Add Event.</a>	
-	</div>
-	{{/eventPage}}
+
 </div>
 {{/data}}
